--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "mineflayer": "latest",
-    "mineflayer-bedrock": "latest",
-    "express": "latest"
+  "mineflayer": "^4.20.0",
+  "mineflayer-bedrock": "^1.6.0",
+  "express": "^4.18.2"
+}
+
   }
 }
